envoy/grpc-json-transcoder.yaml
admin:
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}

static_resources:
  listeners:
  - name: rest-listener
    address:
      socket_address: {address: 0.0.0.0, port_value: 8080}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_json
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: grpc, timeout: 60s}
          http_filters:
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              services:
                - animeshon.hub.v1alpha1.Git
                - animeshon.hub.v1alpha1.Hub
              print_options:
                add_whitespace: true
                always_print_enums_as_ints: false
                always_print_primitive_fields: true
                preserve_proto_field_names: false
              request_validation_options:
                reject_unknown_method: true
                reject_unknown_query_parameters: true
              convert_grpc_status: true
              proto_descriptor: /etc/envoy/proto.bin
          - name: envoy.filters.http.router

  clusters:
  - name: grpc
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 9080
